--- a/collect_phone.html
+++ b/collect_phone.html
@@ -4,93 +4,155 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Verify Phone</title>
-    <link rel="stylesheet" href="/public/css/signup.css" />
+
+    <!-- Bootstrap 5 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <style>
+      body {
+        min-height: 100vh;
+        background-color: #f4f6f8;
+      }
+      .auth-card {
+        background: #ffffff;
+        border-radius: 14px;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08);
+      }
+      .form-label {
+        font-weight: 500;
+        color: #555;
+      }
+      .form-control {
+        border-radius: 10px;
+      }
+      .form-control:focus {
+        border-color: #ffb84d;
+        box-shadow: 0 0 0 0.2rem rgba(255, 184, 77, 0.25);
+      }
+      .btn-primary {
+        background: linear-gradient(90deg, #ffb84d, #e85c41);
+        border: none;
+        color: #111;
+        font-weight: 700;
+      }
+      .btn-primary:hover {
+        filter: brightness(1.05);
+      }
+      .btn-outline-warning {
+        border-color: #ffb84d;
+        color: #e85c41;
+      }
+      .btn-outline-warning:hover {
+        background-color: #ffb84d;
+        color: #111;
+      }
       .ok {
         display: none;
-        color: green;
+        color: #22c55e;
         font-weight: 600;
       }
       .err {
         color: #b00020;
+        font-size: 0.9rem;
       }
     </style>
   </head>
-  <body>
-    <div class="auth-layout">
-      <div class="nav-logo">
+
+  <body class="d-flex align-items-center justify-content-center p-3">
+    <div class="container" style="max-width: 520px">
+      <!-- Logo -->
+      <div class="text-center mb-4">
         <img
-          src="https://www.apnapayment.com/website/img/logo/ApnaPayment200White.png"
+          src="https://www.apnapayment.com/website/img/logo/ApnaPayment200Black.png"
           alt="ApnaPayment"
+          class="img-fluid"
+          style="max-width: 180px"
         />
       </div>
-      <aside class="info-card" aria-hidden="true">
-        <div class="info-inner">
-          <h2>Verify Your Phone For Further Assistance</h2>
-          <p class="info-desc">
-            We'll send a verification code to your phone so we can verify your
-            identity.<br /><br />
-            Quick and secure.
-          </p>
-        </div>
-      </aside>
 
-      <div class="form-column">
+      <!-- Card -->
+      <div class="auth-card p-4 p-md-5">
+        <h4 class="text-center fw-bold mb-2">Verify Your Phone</h4>
+        <p class="text-center text-muted mb-4">
+          We’ll send a verification code to confirm your identity.<br />
+          Quick and secure.
+        </p>
+
+        <!-- Step 1 -->
         <div id="step1">
-          <h2 class="tophead">Verify your phone</h2>
-          <label>Phone</label>
-          <input
-            id="phone"
-            pattern="\d{10}"
-            name="phone"
-            inputmode="numeric"
-            placeholder="Enter your number here"
-            maxlength="10"
-            required
-          />
-          <div class="row">
-            <span class="spacer-label"></span>
-            <button id="sendOtp" class="small" type="button">Send OTP</button>
+          <div class="mb-3">
+            <label class="form-label">Phone</label>
+            <input
+              id="phone"
+              name="phone"
+              class="form-control"
+              inputmode="numeric"
+              pattern="\d{10}"
+              maxlength="10"
+              placeholder="Enter 10-digit phone number"
+              required
+            />
           </div>
 
-          <div id="step2" style="display: none; margin-top: 12px">
-            <label>Enter OTP</label>
-            <input
-              id="otp"
-              inputmode="numeric"
-              maxlength="6"
-              pattern="\d{6}"
-              placeholder="Enter OTP"
-            />
-            <button id="verifyOtp" class="small" type="button">Verify</button>
-            <span id="tick" class="ok">✓ Verified</span>
+          <div class="text-end mb-3">
+            <button id="sendOtp" type="button" class="btn btn-outline-warning">
+              Send OTP
+            </button>
           </div>
-          <p id="msg" style="margin-top: 10px"></p>
+
+          <!-- Step 2 -->
+          <div id="step2" style="display: none">
+            <div class="mb-3">
+              <label class="form-label">Enter OTP</label>
+              <div class="d-flex gap-2 align-items-center">
+                <input
+                  id="otp"
+                  class="form-control"
+                  inputmode="numeric"
+                  maxlength="6"
+                  pattern="\d{6}"
+                  placeholder="6-digit OTP"
+                />
+                <button
+                  id="verifyOtp"
+                  type="button"
+                  class="btn btn-outline-warning"
+                >
+                  Verify
+                </button>
+                <span id="tick" class="ok">✓ Verified</span>
+              </div>
+            </div>
+          </div>
+
+          <div id="msg" class="err mt-2 text-center"></div>
         </div>
       </div>
     </div>
 
+    <!-- JS (LOGIC UNCHANGED) -->
     <script>
       (function () {
         const $ = (s) => document.querySelector(s);
         const say = (t) => {
           const el = $("#msg");
-          el.textContent = t;
+          el.textContent = t || "";
           return el;
         };
 
-        // normalize phone to digits only and ensure 10 digits (India)
         function normalizePhone(raw) {
           if (!raw) return "";
           const digits = raw.replace(/\D+/g, "");
           return digits.length === 10 ? digits : "";
         }
 
-        // Send OTP (sms_otp.php expects { action:'send_otp', mobile: '...' })
+        // Send OTP
         $("#sendOtp").onclick = async () => {
           say("");
-          const raw = $("#phone").value.trim();
-          const phone = normalizePhone(raw);
+          const phone = normalizePhone($("#phone").value.trim());
           if (!phone) return say("Enter a valid 10-digit phone.");
 
           try {
@@ -103,6 +165,7 @@
             const d = await res.json();
             if (!d.success)
               return say(d.error || d.message || "Failed to send OTP.");
+
             say("OTP sent to +91 " + phone);
             $("#step2").style.display = "block";
             $("#otp").focus();
@@ -112,17 +175,16 @@
           }
         };
 
-        // Verify OTP, then call save_phone.php (server expects { phone: 'digits' })
+        // Verify OTP + save phone
         $("#verifyOtp").onclick = async () => {
           say("");
-          const raw = $("#phone").value.trim();
-          const phone = normalizePhone(raw);
+          const phone = normalizePhone($("#phone").value.trim());
           const otp = $("#otp").value.trim();
+
           if (!phone) return say("Enter a valid 10-digit phone.");
           if (!/^\d{6}$/.test(otp)) return say("Enter a valid 6-digit OTP.");
 
           try {
-            // 1) verify with sms_otp (include credentials so session is matched)
             const v = await fetch("/config/sms_otp.php", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
@@ -136,7 +198,6 @@
             const j = await v.json();
             if (!j.success) return say(j.error || j.message || "OTP invalid.");
 
-            // 2) call save_phone.php to persist the number for logged-in user
             const s = await fetch("/config/save_phone.php", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
@@ -144,22 +205,20 @@
               body: JSON.stringify({ phone: phone }),
             });
             const res = await s.json();
-            if (!res.success) {
-              // provide the server message if available
+            if (!res.success)
               return say(res.message || res.error || "Failed to save phone.");
-            }
 
-            // success
             $("#tick").style.display = "inline";
-            say("Phone verified and saved. Redirecting...");
-            setTimeout(() => (window.location = "/partner_form.php"), 900);
+            say("Phone verified successfully. Redirecting...");
+            setTimeout(() => {
+              window.location = "/partner_form.php";
+            }, 900);
           } catch (err) {
             console.error(err);
-            say("Network error while verifying OTP or saving phone.");
+            say("Network error while verifying OTP.");
           }
         };
 
-        // optional: allow pressing Enter in OTP field to trigger verify
         $("#otp").addEventListener("keydown", (e) => {
           if (e.key === "Enter") {
             e.preventDefault();
