--- a/forgot-mpin.html
+++ b/forgot-mpin.html
@@ -4,141 +4,210 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Forgot mPIN</title>
-    <link rel="stylesheet" href="/public/css/signup.css" />
+
+    <!-- Bootstrap 5 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <style>
+      body {
+        min-height: 100vh;
+        background-color: #f4f6f8;
+      }
+      .auth-card {
+        background: #ffffff;
+        border-radius: 14px;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08);
+      }
+      .form-label {
+        font-weight: 500;
+        color: #555;
+      }
+      .form-control {
+        border-radius: 10px;
+      }
+      .form-control:focus {
+        border-color: #ffb84d;
+        box-shadow: 0 0 0 0.2rem rgba(255, 184, 77, 0.25);
+      }
+      .btn-primary {
+        background: linear-gradient(90deg, #ffb84d, #e85c41);
+        border: none;
+        color: #111;
+        font-weight: 700;
+      }
+      .btn-primary:hover {
+        filter: brightness(1.05);
+      }
+      .btn-outline-warning {
+        border-color: #ffb84d;
+        color: #e85c41;
+      }
+      .btn-outline-warning:hover {
+        background-color: #ffb84d;
+        color: #111;
+      }
+      .toggle-btn {
+        font-size: 13px;
+        color: #e85c41;
+        background: none;
+        border: none;
+        cursor: pointer;
+      }
       .ok {
         display: none;
-        color: green;
+        color: #22c55e;
         font-weight: 600;
       }
       .err {
         color: #b00020;
-      }
-      .toggle-btn {
-        cursor: pointer;
-        font-size: 13px;
-        color: #ffb84d;
-        background: none;
-        border: none;
-        position: absolute;
-        right: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-      }
-      .input-wrapper {
-        position: relative;
-        display: flex;
-        align-items: center;
-      }
-      input[type="password"],
-      input[type="text"] {
-        width: 100%;
-        padding-right: 45px;
+        font-size: 0.9rem;
+        min-height: 18px;
       }
     </style>
   </head>
-  <body>
-    <div class="auth-layout">
-      <div class="nav-logo">
+
+  <body class="d-flex align-items-center justify-content-center p-3">
+    <div class="container" style="max-width: 520px">
+      <!-- Logo -->
+      <div class="text-center mb-4">
         <img
-          src="https://www.apnapayment.com/website/img/logo/ApnaPayment200White.png"
+          src="https://www.apnapayment.com/website/img/logo/ApnaPayment200Black.png"
           alt="ApnaPayment"
+          class="img-fluid"
+          style="max-width: 180px"
         />
       </div>
-      <aside class="info-card" aria-hidden="true">
-        <div class="info-inner">
-          <h2>Reset your mPIN</h2>
-          <p class="info-desc">
-            We'll send a verification code to your phone so you can set a new
-            mPIN.<br /><br />
-            Quick and secure recovery.
-          </p>
-        </div>
-      </aside>
 
-      <div class="form-column">
+      <!-- Card -->
+      <div class="auth-card p-4 p-md-5">
+        <h4 class="text-center fw-bold mb-2">Reset Your mPIN</h4>
+        <p class="text-center text-muted mb-4">
+          We’ll verify your phone number and help you set a new mPIN.
+        </p>
+
+        <!-- STEP 1 -->
         <div id="step1">
-          <h2 class="tophead">Forgot mPIN</h2>
-          <label>Phone</label>
-          <input
-            id="phone"
-            pattern="\d{10}"
-            inputmode="numeric"
-            maxlength="10"
-            required
-          />
-          <div class="row">
-            <span class="spacer-label"></span>
-            <button id="send" class="small" type="button">Send OTP</button>
-          </div>
-          <div id="msg" class="err"></div>
-          <div class="footer-links">
-            Remembered your mPIN? <a href="index.html">Back to Login</a>
-          </div>
-        </div>
-
-        <div id="step2" style="display: none; margin-top: 1rem">
-          <label>Enter OTP</label>
-          <input id="otp" inputmode="numeric" maxlength="6" pattern="\d{6}" />
-          <button id="verify" class="small" type="button">Verify</button>
-          <span id="tick" class="ok">✓ Verified</span>
-        </div>
-
-        <div id="step3" style="display: none; margin-top: 1rem">
-          <label>New mPIN</label>
-          <div class="input-wrapper">
+          <div class="mb-3">
+            <label class="form-label">Phone</label>
             <input
-              id="mpin"
-              type="password"
+              id="phone"
+              class="form-control"
               inputmode="numeric"
-              maxlength="6"
-              pattern="\d{4,6}"
+              maxlength="10"
+              placeholder="Enter 10-digit phone number"
+              required
             />
-            <button type="button" class="toggle-btn" data-target="mpin">
-              Show
+          </div>
+
+          <div class="d-flex justify-content-end mb-2">
+            <button id="send" type="button" class="btn btn-outline-warning">
+              Send OTP
             </button>
           </div>
 
-          <label>Confirm mPIN</label>
-          <div class="input-wrapper">
-            <input
-              id="mpin2"
-              type="password"
-              inputmode="numeric"
-              maxlength="6"
-              pattern="\d{4,6}"
-            />
-            <button type="button" class="toggle-btn" data-target="mpin2">
-              Show
-            </button>
+          <div id="msg" class="err mb-2"></div>
+
+          <div class="text-center">
+            <a href="index.html" class="small text-decoration-none">
+              Remembered your mPIN? Back to Login
+            </a>
+          </div>
+        </div>
+
+        <!-- STEP 2 -->
+        <div id="step2" style="display: none" class="mt-4">
+          <div class="mb-3">
+            <label class="form-label">Enter OTP</label>
+            <div class="d-flex gap-2 align-items-center">
+              <input
+                id="otp"
+                class="form-control"
+                inputmode="numeric"
+                maxlength="6"
+                placeholder="6-digit OTP"
+              />
+              <button id="verify" type="button" class="btn btn-outline-warning">
+                Verify
+              </button>
+              <span id="tick" class="ok">✓ Verified</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- STEP 3 -->
+        <div id="step3" style="display: none" class="mt-4">
+          <div class="mb-3">
+            <label class="form-label">New mPIN</label>
+            <div class="input-group">
+              <input
+                id="mpin"
+                type="password"
+                class="form-control"
+                inputmode="numeric"
+                maxlength="6"
+                placeholder="4–6 digits"
+              />
+              <button
+                type="button"
+                class="toggle-btn input-group-text"
+                data-target="mpin"
+              >
+                Show
+              </button>
+            </div>
           </div>
 
-          <button id="set" type="button">Reset mPIN</button>
+          <div class="mb-3">
+            <label class="form-label">Confirm mPIN</label>
+            <div class="input-group">
+              <input
+                id="mpin2"
+                type="password"
+                class="form-control"
+                inputmode="numeric"
+                maxlength="6"
+                placeholder="Repeat mPIN"
+              />
+              <button
+                type="button"
+                class="toggle-btn input-group-text"
+                data-target="mpin2"
+              >
+                Show
+              </button>
+            </div>
+          </div>
+
+          <button id="set" type="button" class="btn btn-primary w-100 py-2">
+            Reset mPIN
+          </button>
         </div>
       </div>
     </div>
 
+    <!-- JS (LOGIC UNCHANGED) -->
     <script>
       const $ = (s) => document.querySelector(s);
-      const say = (t) => ($("#msg").textContent = t);
+      const say = (t) => ($("#msg").textContent = t || "");
 
-      // Toggle show/hide for mPIN inputs
+      // Toggle show/hide
       document.addEventListener("click", (e) => {
-        if (e.target.classList.contains("toggle-btn")) {
-          const targetId = e.target.dataset.target;
-          const input = document.getElementById(targetId);
-          if (!input) return;
-          if (input.type === "password") {
-            input.type = "text";
-            e.target.textContent = "Hide";
-          } else {
-            input.type = "password";
-            e.target.textContent = "Show";
-          }
+        if (!e.target.classList.contains("toggle-btn")) return;
+        const input = document.getElementById(e.target.dataset.target);
+        if (!input) return;
+        if (input.type === "password") {
+          input.type = "text";
+          e.target.textContent = "Hide";
+        } else {
+          input.type = "password";
+          e.target.textContent = "Show";
         }
       });
 
-      // --- Step 1: Send OTP ---
+      // STEP 1: Send OTP
       $("#send").onclick = async () => {
         say("");
         const phone = $("#phone").value.trim();
@@ -155,6 +224,7 @@
           const d = await r.json();
           if (!d.success)
             return say(d.error || d.message || "Failed to send OTP.");
+
           say("OTP sent successfully.");
           $("#step2").style.display = "block";
         } catch (err) {
@@ -163,7 +233,7 @@
         }
       };
 
-      // --- Step 2: Verify OTP ---
+      // STEP 2: Verify OTP
       $("#verify").onclick = async () => {
         say("");
         const phone = $("#phone").value.trim();
@@ -187,7 +257,7 @@
             return say(j.error || j.message || "OTP verification failed.");
 
           $("#tick").style.display = "inline";
-          say("Phone verified. Now set your new mPIN.");
+          say("Phone verified. Set your new mPIN.");
           $("#step3").style.display = "block";
         } catch (err) {
           console.error(err);
@@ -195,7 +265,7 @@
         }
       };
 
-      // --- Step 3: Reset mPIN ---
+      // STEP 3: Reset mPIN
       $("#set").onclick = async () => {
         say("");
         const phone = $("#phone").value.trim();
@@ -213,11 +283,8 @@
             body: JSON.stringify({ phone, mpin }),
           });
           const res = await r.json();
-
-          if (!res.success) {
-            // display custom message from backend
+          if (!res.success)
             return say(res.message || res.error || "Failed to reset mPIN.");
-          }
 
           say("mPIN reset successful! Redirecting...");
           setTimeout(() => (window.location = "index.html"), 1200);
