--- a/signup.html
+++ b/signup.html
@@ -4,130 +4,209 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Create an Account</title>
-    <link rel="stylesheet" href="/public/css/signup.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        min-height: 100vh;
+        background-color: #f4f6f8;
+      }
+      .auth-card {
+        background: #ffffff;
+        border-radius: 14px;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08);
+      }
+      .form-label {
+        color: #555;
+        font-weight: 500;
+      }
+      .form-control {
+        border-radius: 10px;
+      }
+      .form-control:focus {
+        border-color: #ffb84d;
+        box-shadow: 0 0 0 0.2rem rgba(255, 184, 77, 0.25);
+      }
+      .btn-primary {
+        background: linear-gradient(90deg, #ffb84d, #e85c41);
+        border: none;
+        color: #111;
+        font-weight: 700;
+      }
+      .btn-primary:hover {
+        filter: brightness(1.05);
+      }
+      .btn-outline-warning {
+        border-color: #ffb84d;
+        color: #e85c41;
+      }
+      .btn-outline-warning:hover {
+        background-color: #ffb84d;
+        color: #111;
+      }
+      .ok {
+        color: #22c55e;
+        font-weight: 600;
+        font-size: 0.9rem;
+      }
+      .err {
+        color: #e85c41;
+        font-size: 0.9rem;
+        min-height: 20px;
+      }
+    </style>
   </head>
-  <body>
-    <div class="auth-layout">
-      <div class="nav-logo">
+
+  <body class="d-flex align-items-center justify-content-center p-3">
+    <div class="container" style="max-width: 520px">
+      <div class="text-center mb-4">
         <img
-          src="https://www.apnapayment.com/website/img/logo/ApnaPayment200White.png"
+          src="https://www.apnapayment.com/website/img/logo/ApnaPayment200Black.png"
           alt="ApnaPayment"
+          class="img-fluid"
+          style="max-width: 180px"
         />
       </div>
-      <div class="form-column">
-        <div class="overlay">
-          <form id="signupForm" class="auth-card" autocomplete="off">
-            <h2 class="header">Create an Account</h2>
-            <div class="row">
-              <label>Full Name</label>
-              <input name="name" type="text" required placeholder="Your name" />
-            </div>
-            <!-- Email -->
-            <div class="row">
-              <label>Email</label>
+
+      <div class="auth-card p-4 p-md-5">
+        <h3 class="text-center mb-4 fw-bold text-dark">Create an Account</h3>
+
+        <form id="signupForm" autocomplete="off">
+          <div class="mb-3">
+            <label class="form-label">Full Name</label>
+            <input
+              type="text"
+              name="name"
+              class="form-control"
+              placeholder="Your name"
+              required
+            />
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Email</label>
+            <input
+              type="email"
+              id="emailInput"
+              name="email"
+              class="form-control"
+              placeholder="you@example.com"
+              required
+            />
+          </div>
+
+          <div class="mb-2">
+            <label class="form-label">Phone</label>
+            <div class="d-flex gap-2 align-items-center">
               <input
-                name="email"
-                id="emailInput"
-                type="email"
-                required
-                placeholder="you@example.com"
-              />
-            </div>
-            <!-- Phone -->
-            <div class="row" style="align-items: center">
-              <label>Phone</label>
-              <input
-                name="phone"
-                id="phoneInput"
                 type="tel"
-                inputmode="numeric"
-                maxlength="10"
-                pattern="\d{10}"
-                required
+                id="phoneInput"
+                name="phone"
+                class="form-control"
                 placeholder="10-digit number"
+                maxlength="10"
+                required
               />
-              <span
-                id="phoneTick"
-                class="ok"
-                aria-hidden="true"
-                style="display: none"
-                >✓ Verified</span
-              >
+              <span id="phoneTick" class="ok" style="display: none">
+                ✓ Verified
+              </span>
             </div>
-            <div class="row">
-              <span class="spacer-label"></span>
-              <button class="small" id="sendPhoneOtp" type="button">
-                Send OTP
-              </button>
-            </div>
-            <div
-              class="row"
-              id="phoneOtpRow"
-              style="display: none; align-items: center"
+          </div>
+
+          <div class="mb-3 text-end">
+            <button
+              type="button"
+              id="sendPhoneOtp"
+              class="btn btn-sm btn-outline-warning"
             >
-              <label>Phone OTP</label>
+              Send OTP
+            </button>
+          </div>
+
+          <div id="phoneOtpRow" class="mb-3" style="display: none">
+            <label class="form-label">Phone OTP</label>
+            <div class="d-flex gap-2">
               <input
+                type="text"
                 id="phoneOtp"
-                inputmode="numeric"
+                class="form-control"
                 maxlength="6"
-                pattern="\d{6}"
-                placeholder="6-digit code"
+                placeholder="6-digit OTP"
               />
-              <button class="small" id="verifyPhoneOtp" type="button">
+              <button
+                type="button"
+                id="verifyPhoneOtp"
+                class="btn btn-outline-warning"
+              >
                 Verify
               </button>
             </div>
-            <!-- mPIN -->
-            <div class="row" style="align-items: center">
-              <label>mPIN</label>
-              <div class="input-wrapper" style="flex: 1">
-                <input
-                  name="mpin"
-                  id="mpin"
-                  type="password"
-                  inputmode="numeric"
-                  maxlength="6"
-                  pattern="\d{6}"
-                  required
-                  placeholder="6 digits"
-                />
-                <button type="button" class="toggle-btn" data-target="mpin">
-                  Show
-                </button>
-              </div>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">mPIN</label>
+            <div class="input-group">
+              <input
+                type="password"
+                id="mpin"
+                name="mpin"
+                class="form-control"
+                maxlength="6"
+                placeholder="6 digits"
+                required
+              />
+              <button
+                class="btn btn-outline-warning toggle-btn"
+                type="button"
+                data-target="mpin"
+              >
+                Show
+              </button>
             </div>
-            <div class="row" style="align-items: center">
-              <label>Confirm mPIN</label>
-              <div class="input-wrapper" style="flex: 1">
-                <input
-                  name="mpin_confirm"
-                  id="mpin_confirm"
-                  type="password"
-                  inputmode="numeric"
-                  maxlength="6"
-                  pattern="\d{6}"
-                  required
-                  placeholder="Repeat mPIN"
-                />
-                <button
-                  type="button"
-                  class="toggle-btn"
-                  data-target="mpin_confirm"
-                >
-                  Show
-                </button>
-              </div>
+          </div>
+
+          <div class="mb-4">
+            <label class="form-label">Confirm mPIN</label>
+            <div class="input-group">
+              <input
+                type="password"
+                id="mpin_confirm"
+                name="mpin_confirm"
+                class="form-control"
+                maxlength="6"
+                placeholder="Repeat mPIN"
+                required
+              />
+              <button
+                class="btn btn-outline-warning toggle-btn"
+                type="button"
+                data-target="mpin_confirm"
+              >
+                Show
+              </button>
             </div>
-            <button type="submit">Sign Up</button>
-            <div id="msg" class="err" role="status" aria-live="polite"></div>
-            <div class="divider">or</div>
-            <!-- Google button renders here -->
-            <div id="google-signup" class="google-btn"></div>
-            <div class="footer-links">
-              Already have an account? <a href="index.html">Sign In</a>
-            </div>
-          </form>
-        </div>
+          </div>
+
+          <button type="submit" class="btn btn-primary w-100 py-2">
+            Sign Up
+          </button>
+
+          <div id="msg" class="err mt-2 text-center"></div>
+
+          <div class="text-center my-3 text-muted">or</div>
+
+          <div id="google-signup" class="mb-3 text-center"></div>
+
+          <div class="text-center">
+            <span class="text-muted">Already have an account?</span>
+            <a href="index.html" class="fw-semibold" style="color: #e85c41">
+              Sign In
+            </a>
+          </div>
+        </form>
       </div>
     </div>
     <script
@@ -139,131 +218,92 @@
     <script src="/public/js/google-auth.js"></script>
     <script>
       const $ = (s) => document.querySelector(s);
-      const $$ = (s) => Array.from(document.querySelectorAll(s));
       const say = (t) => {
         $("#msg").textContent = t || "";
       };
+
       function normalizePhone(raw) {
         const d = (raw || "").replace(/\D+/g, "");
         return d.length === 10 ? d : "";
       }
+
       $("#phoneInput").addEventListener("input", () => {
         $("#phoneTick").style.display = "none";
       });
+
       document.addEventListener("click", (e) => {
         if (!e.target.classList.contains("toggle-btn")) return;
-        const targetId = e.target.dataset.target;
-        const input = document.getElementById(targetId);
+        const input = document.getElementById(e.target.dataset.target);
         if (!input) return;
-        if (input.type === "password") {
-          input.type = "text";
-          e.target.textContent = "Hide";
-        } else {
-          input.type = "password";
-          e.target.textContent = "Show";
-        }
+        input.type = input.type === "password" ? "text" : "password";
+        e.target.textContent = input.type === "password" ? "Show" : "Hide";
       });
-      async function safeJson(response) {
-        const text = await response.text();
+
+      async function safeJson(r) {
+        const t = await r.text();
         try {
-          return { ok: response.ok, json: JSON.parse(text) };
-        } catch (e) {
-          return { ok: response.ok, json: null, text };
+          return { ok: r.ok, json: JSON.parse(t) };
+        } catch {
+          return { ok: r.ok, text: t };
         }
       }
-      // ---- Phone OTP send/verify ----
+
       $("#sendPhoneOtp").onclick = async () => {
         say("");
-        const phoneRaw = $("#phoneInput").value.trim();
-        const phone = normalizePhone(phoneRaw);
-        if (!phone) return say("Enter a valid 10-digit phone");
-        try {
-          const res = await fetch("/config/sms_otp.php", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            credentials: "include",
-            body: JSON.stringify({ action: "send_otp", mobile: phone }),
-          });
-          const parsed = await safeJson(res);
-          if (!parsed.ok)
-            return say(
-              parsed.json?.error || parsed.text || "Failed to send phone OTP",
-            );
-          const d = parsed.json;
-          if (!d) return say("Server returned invalid response");
-          if (!d.success) return say(d.error || "Failed to send phone OTP");
-          $("#phoneOtpRow").style.display = "flex";
-          $("#phoneOtp").focus();
-        } catch (err) {
-          console.error(err);
-          say("Network error sending phone OTP");
-        }
+        const phone = normalizePhone($("#phoneInput").value);
+        if (!phone) return say("Enter valid phone");
+        const res = await fetch("/config/sms_otp.php", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          credentials: "include",
+          body: JSON.stringify({ action: "send_otp", mobile: phone }),
+        });
+        const d = await safeJson(res);
+        if (!d.ok || !d.json?.success) return say("OTP send failed");
+        $("#phoneOtpRow").style.display = "block";
       };
+
       $("#verifyPhoneOtp").onclick = async () => {
         say("");
-        const phoneRaw = $("#phoneInput").value.trim();
-        const phone = normalizePhone(phoneRaw);
+        const phone = normalizePhone($("#phoneInput").value);
         const otp = $("#phoneOtp").value.trim();
-        if (!/^\d{6}$/.test(otp)) return say("Enter a valid 6-digit OTP");
-        try {
-          const res = await fetch("/config/sms_otp.php", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            credentials: "include",
-            body: JSON.stringify({ action: "verify_otp", mobile: phone, otp }),
-          });
-          const parsed = await safeJson(res);
-          if (!parsed.ok)
-            return say(
-              parsed.json?.error || parsed.text || "Phone OTP verify failed",
-            );
-          const d = parsed.json;
-          if (!d) return say("Server returned invalid response");
-          if (!d.success) return say(d.error || "Phone OTP invalid");
-          $("#phoneTick").style.display = "inline";
-          $("#phoneOtpRow").style.display = "none";
-          say("");
-        } catch (err) {
-          console.error(err);
-          say("Network error verifying phone OTP");
-        }
+        const res = await fetch("/config/sms_otp.php", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          credentials: "include",
+          body: JSON.stringify({ action: "verify_otp", mobile: phone, otp }),
+        });
+        const d = await safeJson(res);
+        if (!d.ok || !d.json?.success) return say("Invalid OTP");
+        $("#phoneTick").style.display = "inline";
+        $("#phoneOtpRow").style.display = "none";
       };
-      // ---- Signup submit ----
+
       $("#signupForm").onsubmit = async (e) => {
         e.preventDefault();
         say("");
+
         const name = document.querySelector("[name=name]").value.trim();
         const email = $("#emailInput").value.trim();
-        const phoneRaw = $("#phoneInput").value.trim();
-        const phone = normalizePhone(phoneRaw);
+        const phone = normalizePhone($("#phoneInput").value);
         const mpin = $("#mpin").value.trim();
         const mpin2 = $("#mpin_confirm").value.trim();
-        // Basic client-side checks
-        if (!name) return say("Enter your name");
-        if (!email) return say("Enter your email");
-        if (!phone) return say("Enter a valid 10-digit phone");
-        if (!/^\d{4,6}$/.test(mpin)) return say("mPIN must be 4–6 digits");
-        if (mpin !== mpin2) return say("mPINs do not match");
-        if (window.getComputedStyle($("#phoneTick")).display === "none")
-          return say("Please verify your phone OTP first");
-        try {
-          const res = await fetch("/config/register.php", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            credentials: "include",
-            body: JSON.stringify({ name, email, phone, mpin }),
-          });
-          const parsed = await safeJson(res);
-          if (!parsed.ok)
-            return say(parsed.json?.error || parsed.text || "Signup failed");
-          const d = parsed.json;
-          if (!d) return say("Server returned invalid response");
-          if (!d.success) return say(d.error || "Signup failed");
-          location.href = "index.html";
-        } catch (err) {
-          console.error(err);
-          say("Network error during signup");
-        }
+
+        if (!name || !email || !phone) return say("All fields required");
+        if (mpin !== mpin2) return say("mPIN mismatch");
+        if ($("#phoneTick").style.display === "none")
+          return say("Verify phone OTP first");
+
+        const res = await fetch("/config/register.php", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          credentials: "include",
+          body: JSON.stringify({ name, email, phone, mpin }),
+        });
+
+        const d = await safeJson(res);
+        if (!d.ok || !d.json?.success) return say("Signup failed");
+        location.href = "index.html";
       };
     </script>
   </body>
